--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -46,9 +46,12 @@ nl:
         you_submitted_ago: "Je hebt deze opdracht %{time} ingestuurd."
         see_submissions_page: "Bekijk je inzendingen en feedback op de %{submissions_page}."
         until_deadline_new_version: 'Normaal kun je tot de deadline nog een nieuwe versie van je oplossing insturen.'
-        deadline_is: "De deadline is op %{date} om %{time}."
-        deadline_was: "De deadline was op %{date} om %{time}."
+        deadline_is: "De deadline is op %{deadline}."
+        deadline_was: "De deadline is <u>verstreken</u> op %{deadline}."
         deadline_hard: "Vanaf die tijd zul je deze opdracht niet meer kunnen insturen."
+        deadline_soft: "Vanaf die tijd kun je de opdracht nog insturen, maar deze wordt als te laat gemarkeerd."
+        deadline_was_hard: "Je kunt deze opdracht niet meer insturen."
+        deadline_was_soft: "Je kunt de opdracht nog insturen, maar deze wordt als te laat gemarkeerd."
         files_submitted: "Ingestuurde bestanden:"
         check_results: "Check-resultaten"
         overview: "Resultaten"
@@ -357,4 +360,5 @@ nl:
         default: "%a %d %b %Y %H:%M:%S %Z"
         long: "%d %B %Y %H:%M"
         short: "%a %d %b %H:%M"
+        deadline: "%A %d %b om %H:%M"
       pm: "'s middags"
