submit + grade combination in overview

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -52,7 +52,8 @@ en:
         deadline_soft: "From that time, you will still be able to submit this assignment, but it will be marked as late."
         deadline_was_hard: "You will not be able to submit this assignment anymore."
         deadline_was_soft: "You will still be able to submit this assignment, but it will be marked as late."
-        files_submitted: "Submitted files:"
+        files_submitted: "Submitted files"
+        grade: "Evaluation"
         check_results: "Check results"
         overview: "Results"
         weight: "weight"
