--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -54,7 +54,8 @@ nl:
         deadline_soft: "Vanaf die tijd kun je de opdracht nog insturen, maar deze wordt als te laat gemarkeerd."
         deadline_was_hard: "Je kunt deze opdracht niet meer insturen."
         deadline_was_soft: "Je kunt de opdracht nog insturen, maar deze wordt als te laat gemarkeerd."
-        files_submitted: "Ingestuurde bestanden:"
+        files_submitted: "Ingestuurde bestanden"
+        grade: "Beoordeling"
         check_results: "Check-resultaten"
         overview: "Resultaten"
         weight: "weging"
