--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -62,7 +62,7 @@ nl:
         submit_is_graded: 'Je inzending is nagekeken en daarom kun je geen nieuwe versie meer insturen.'
         at_the_end_of_page: 'Verstuur je oplossing onderaan deze pagina'
         course_not_open: 'Deze cursus is op dit moment niet geopend voor inzendingen.'
-        cant_not_logged_in: "Je kunt geen opdrachten insturen omdat je account niet geactiveerd is als een studentaccount. Check of je het juiste account gebruikt of neem contact op met de docent."
+        cant_not_logged_in: "Je kunt geen opdrachten insturen omdat je account niet geactiveerd is als een studentaccount. Check dat je het juiste account gebruikt of neem contact op met de docent."
         cant_not_active: "Je kunt geen opdrachten insturen omdat je als inactief gemarkeerd bent voor deze cursus. Neem alsjeblieft contact op met de docent."
         cant_resubmit: "Je kunt op dit moment niet insturen."
         cant_resubmit_explainer: "Je oplossing staat in de rij voor beoordeling, dus je kunt nu geen nieuwe oplossing insturen. Check later nog eens om de resultaten te zien of opnieuw in te sturen. Als je denkt dat je op dit moment al zou moeten kunnen insturen, laat het dan gerust weten!"
@@ -75,6 +75,9 @@ nl:
         check_delay:
             one: "Omdat je deze opdracht al eerder hebt ingestuurd duurt de automatische check ongeveer %{count} minuut."
             other: "Omdat je deze opdracht al eerder hebt ingestuurd duurt de automatische check ongeveer %{count} minuten."
+
+    exam:
+        is_currently_locked: "\"%{exam_name}\" staat momenteel dicht."
 
     hands:
         assistance: Assistentie
